# Test_for_GlobalPersonal_client

./: .gitignore  CMakeLists.txt  NOTE.md  README.md  TASK.txt
src/: Constants.hpp  MtFind.cpp  MtFind.hpp  MtFind_test.cpp  Position.hpp  Worker.cpp  Worker.hpp  main.cpp  test.cpp
